# ML_OPS

./: .env.dev  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  app.py  main.py  model_classifier.py  my_iris_model.joblib  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
tests/: test_app.py  test_model.py  test_settings.py
